# teltek

./: .gitignore  pyproject.toml
teltek/cmd/: __init__.py  _accelerometer.py  _batcher.py  _client.py  _device_id.py
teltek/cmd/transport/: __init__.py  _abc.py  _mqtt.py  _sms.py  sms.py
teltek/codec/: __init__.py  _codec12.py  _codec8e.py  _error.py  _frame.py
teltek/fota/: __init__.py  _api.py  _device.py  _file.py  _pagination.py  _task.py
teltek/parameters/: __init__.py  _config.py  _data_acquisition_mode.py  _gprs.py  _gsm.py  _io.py  _map.py  _obd.py  _parameter.py  _sms_call.py  _system.py  _tracking_on_demand.py  _trip_odometer.py
teltek/parameters/_db/: __init__.py  _accelerometer.py  _features.py  _fms.py  _gprs.py  _io.py  _obd.py  _sms_call.py  _system.py
tests/cmd/: test_accelerometer.py
tests/codec/: test_codec12.py  test_codec8e.py
tests/parameters/: test_mapping.py
