[tool.poetry]
name = "teltek"
version = "0.1.0"
description = ""
authors = ["Simon Berger <simon.berger@b-on.com>"]

[tool.poetry.dependencies]
python = "^3.13"
aiomqtt = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
