[tool.poetry]
name = "teltek"
version = "0.1.0"
description = ""
authors = ["Simon Berger <simon.berger@b-on.com>"]

[tool.poetry.dependencies]
aiomqtt = "^2.3.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"
lxml = "^5.3.0"
parse = "^1.20.2"
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
